# Godot-Mcp

./: .gitignore  AGENTS.md  README.md  README_EN.md  THIRD_PARTY_LICENSES  pyproject.toml
addons/godot_bridge/: http_bridge.gd  plugin.cfg  plugin.gd
addons/godot_bridge/i18n/: lang_en.gd  lang_zh_CN.gd  localization.gd
addons/godot_bridge/runtime/: runtime_bridge.gd
addons/godot_bridge/tools/: bridge_toolkit.gd  slim_tools.gd
gateway/: __init__.py  server.py  smoke_test.py
skills/godot-mcp/: SKILL.md
skills/godot-mcp/agents/: openai.yaml
