[project]
name = "godot-bridge-gateway"
version = "0.1.0"
description = "FastMCP gateway for the Godot MCP editor bridge."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "websockets>=12.0",
]

[project.scripts]
godot-bridge-gateway = "gateway.server:main"
godot-bridge-smoke = "gateway.smoke_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway"]
